force-app/main/default/objects/sf_devops__Quality_Gate_Rule_Criteria__c/sf_devops__Quality_Gate_Rule_Criteria__c.object-meta.xml
<CustomObject>
    <label>Quality Gate Rule Criteria</label>
    <nameField>
        <label>Quality Gate Rule Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quality Gate Rule Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>