force-app/main/default/objects/sf_devops__Quality_Gate_Rule_Criteria__c/fields/sf_devops__Metric__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Metric__c</fullName>
    <label>Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Severity 1</fullName>
            </value>
            <value>
                <fullName>Severity 2</fullName>
            </value>
            <value>
                <fullName>Severity 3</fullName>
            </value>
            <value>
                <fullName>Severity 4</fullName>
            </value>
            <value>
                <fullName>Severity 5</fullName>
                <default>true</default>
                <label>Severity 5</label>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Essential Tests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>