force-app/main/default/objects/sf_devops__Quality_Gate_Rule_Criteria__c/fields/sf_devops__Operator__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
            <value>
                <fullName>Greater than</fullName>
            </value>
            <value>
                <fullName>Lesser than</fullName>
            </value>
            <value>
                <fullName>Not Equals to</fullName>
            </value>
            <value>
                <fullName>Greater than or Equals to</fullName>
            </value>
            <value>
                <fullName>Lesser than or Equals to</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>