force-app/main/default/objects/sf_devops__Quality_Gate_Rule_Criteria__c/fields/sf_devops__Quality_Gate_Rule__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Quality_Gate_Rule__c</fullName>
    <label>Quality Gate Rule</label>
    <referenceTo>sf_devops__Quality_Gate_Rule__c</referenceTo>
    <relationshipLabel>Quality Gate Rule Criterias</relationshipLabel>
    <relationshipName>Quality_Gate_Rule_Criterias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>