force-app/main/default/objects/sf_devops__Quality_Gate_Rule_Criteria__c/fields/sf_devops__Result_Type__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Result_Type__c</fullName>
    <label>Result Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
                <default>true</default>
                <label>Passed</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>