force-app/main/default/objects/sf_devops__Quality_Gate_Rule_Criteria__c/fields/sf_devops__Sequence__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>