force-app/main/default/objects/sf_devops__Quality_Gate_Rule_Criteria__c/fields/sf_devops__Threshold__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Threshold__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>