force-app/main/default/objects/sf_devops__Quality_Gate_Rule_Criteria__c/listViews/sf_devops__All.listView-meta.xml
<ListView>
    <fullName>sf_devops__All</fullName>
    <columns>NAME</columns>
    <columns>sf_devops__Quality_Gate_Rule__c</columns>
    <columns>sf_devops__Metric__c</columns>
    <columns>sf_devops__Result_Type__c</columns>
    <columns>sf_devops__Operator__c</columns>
    <columns>sf_devops__Threshold__c</columns>
    <columns>sf_devops__Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>